<resources>
    <string name="app_name">UniCon</string>
    <string name="Distance">D I S T A N C E</string>
    <string name="Temperature">T E M P E R A T U R E</string>
    <string name="Speed">S P E E D</string>
    <string name="Weight">W E I G H T</string>
    <string name="EnterValue">Enter value...</string>
    <string name="DistanceConverter">Distance Converter</string>
    <string name="Convert">CONVERT</string>
    <string name="TemperatureConverter">Temperature Converter</string>
    <string name="SpeedConverter">Speed Converter</string>
    <string name="WeightConverter">Weight Converter</string>
    <string name="equals">=</string>
    <string-array name="Distance">
        <item>Meter</item>
        <item>Kilometer</item>
        <item>Inch</item>
    </string-array>
    <string-array name="Temperature">
        <item>Celsius</item>
        <item>Kelvin</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="Speed">
        <item>m/s</item>
        <item>km/h</item>
        <item>mph</item>
    </string-array>
    <string-array name="Weight">
        <item>Gram</item>
        <item>Kilogram</item>
        <item>Pound</item>
    </string-array>
</resources>
