<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
        android:background="@color/colorWeightBg">

    <TextView
        android:id="@+id/tvWeightCon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/WeightConverter"
        android:textSize="30dp"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        />
    <Spinner
        android:id="@+id/sWeight1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvWeightCon"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="10dp">
    </Spinner>

    <EditText
        android:id="@+id/etWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/EnterValue"
        android:layout_below="@id/sWeight1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        />
    <Spinner
        android:id="@+id/sWeight2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etWeight"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="15dp">
    </Spinner>

    <Button
        android:id="@+id/bWeightConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sWeight2"
        android:layout_marginTop="40dp"
        android:layout_centerInParent="true"
        android:background="@color/colorButtonWeight"
        android:text="@string/Convert"/>
</RelativeLayout>