<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
       >
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
     >
    <TextView
        android:id="@+id/tvDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Distance"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorDistance"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivDistance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/distance"
        android:layout_below="@id/tvDistance"
        android:clickable="true"

         />
    <TextView
        android:id="@+id/tvTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Temperature"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_below="@id/ivDistance"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorTemperature"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivTemperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/temperature"
        android:layout_below="@id/tvTemperature"
        android:clickable="true"
        />
    <TextView
        android:id="@+id/tvSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Speed"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_below="@id/ivTemperature"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorSpeed"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/speed"
        android:layout_below="@id/tvSpeed"
        android:clickable="true"
        />

    <TextView
        android:id="@+id/tvWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Weight"
        android:textAlignment="center"
        android:textSize="25dp"
        android:layout_below="@id/ivSpeed"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/colorWeight"
        android:textStyle="bold"/>
    <ImageView
        android:id="@+id/ivWeight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/weight"
        android:layout_below="@id/tvWeight"
        android:clickable="true"
        />
   </RelativeLayout>
</ScrollView>